--- a/standalone/src/example.html
+++ b/standalone/src/example.html
@@ -29,8 +29,8 @@
 
 <body>
     <div id="root">
-        <hsc-window-style-metal>
-            <hsc-window title="Window 1">
+        <lom-window-style-metal>
+            <lom-window title="Window 1">
                 Parameters:
                 <fieldset>
                     <legend>&alpha;</legend>
@@ -40,9 +40,9 @@
                     <legend>&beta;</legend>
                     <input type="range" />
                 </fieldset>
-            </hsc-window>
+            </lom-window>
 
-            <hsc-window :title="title">
+            <lom-window :title="title">
                 Parameters:
                 <fieldset>
                     <legend>&gamma;</legend>
@@ -52,8 +52,8 @@
                     <legend>&delta;</legend>
                     <input type="range" />
                 </fieldset>
-            </hsc-window>
-        </hsc-window-style-metal>
+            </lom-window>
+        </lom-window-style-metal>
     </div>
 </body>
 
